--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^10.18.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
